reworked all of the combat and implemented into level 1 till 3